2006-01-23 Mikhail Khodjaiants
	Bug 119683: long messages during launch cause gdb to timeout, launch to fail.
	+ LocalCDILaunchDelegate.java
	* LaunchMessages.properties
	* plugin.xml

2006-01-06 Mikhail Khodjaiants
	Bug 120509: CDebuggerTab invokes wong initialization code (in addition to right code).
	* CDebuggerTab.java
	* CoreFileDebuggerTab.java

2006-01-06 Mikhail Khodjaiants
	Cleanup.
	* CArgumentsTab.java
	* CMainTab.java

2005-12-27 Mikhail Khodjaiants
	Cleanup.
	* LaunchUIPlugin.java
	* CApplicationLaunchShortcut.java

2005-12-27 Mikhail Khodjaiants
	Bug 109526: Support Eclipse-LazyStart and deprecate Eclipse-AutoStart.
	* MANIFEST.MF

2005-12-20 Mikhail Khodjaiants
	Bug 121474: NPE in CDebuggerTab.
	* CDebuggerTab.java

2005-09-08 Mikhail Khodjaiants
	The "Debugger" tab of the launch configuration dialog is too wide.
	* CDebuggerTab.java
	
2005-09-06 Mikhail Khodjaiants
	Cleanup: replaced "new Boolean" by the static Boolean objects (Java 1.4).
	* CDebuggerTab.java

2005-09-06 Mikhail Khodjaiants
	Bug 108636: mi level selection option should be moved to the gdb page.
	* CDebuggerTab.java

2005-08-31 Alain Magloire
	Fix Pr 107571: Part of this fix is to add the
	inferior process in the session
	* src/org/eclipse/cdt/launch/internal/LocalAttachLaunchDelegate.java

2005-08-25 Mikhail Khodjaiants
	Bug 66446: Use the debugger path as a debugger process label.
	Deprecated the "renderDebuggerProcessLabel" method.
	* AbstractCLaunchDelegate.java

2005-07-18 Alain Magloire
	New combo to choose the MIVersion.
	* src/org/eclipse/cdt/launch/ui/CDEbuggerTab.java

2005-07-14 Mikhail Khodjaiants
	Fix PR 103207: New Icon for the TwoPaneElement in the binary search
	* src/org/eclipse/cdt/launch/ui/CMainTab.java

2005-07-12 Mikhail Khodjaiants
	Bug 103522: Launcher: Stop at main checkbox is covered with default launch dialog size.
	Moved the "Stop in main" and "Advanced" buttons on the line below.
	* CDebuggerTab.java

2005-06-28 Mikhail Khodjaiants