@@ -204,12 +204,7 @@ public class LocalCDILaunchDelegate extends AbstractCLaunchDelegate {
 		try {
 			ICDITarget[] targets = dsession.getTargets();
 			for( int i = 0; i < targets.length; i++ ) {
-				Process process = targets[i].getProcess();
-				IProcess iprocess = null;
-				if ( process != null ) {
-					iprocess = DebugPlugin.newProcess( launch, process, renderProcessLabel( exePath.toOSString() ), getDefaultProcessMap() );
-				}
-				CDIDebugModel.newDebugTarget( launch, project.getProject(), targets[i], renderTargetLabel( debugConfig ), iprocess, exeFile, true, true, false );
+				CDIDebugModel.newDebugTarget( launch, project.getProject(), targets[i], renderTargetLabel( debugConfig ), null, exeFile, true, true, false );
 			}
 		}
 		catch( CoreException e ) {
